--- a/store.html
+++ b/store.html
@@ -1,4 +1,4 @@
-u<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -128,7 +128,7 @@ u<!DOCTYPE html>
             color: #888;
             text-decoration: none;
             text-transform: uppercase;
-            font-size: 14px;
+            font-size: 13px;
             font-weight: 600;
             letter-spacing: 2px;
             transition: 0.4s;
@@ -162,7 +162,7 @@ u<!DOCTYPE html>
             .user-nav-area img { width: 22px; height: 22px; }
             nav { padding: 10px 3%; gap: 15px; }
             .nav-links { gap: 12px; } 
-            .nav-links a { font-size: 13px; letter-spacing: 0.5px; } 
+            .nav-links a { font-size: 11px; letter-spacing: 0.5px; } 
             .search-bar { padding: 10px 15px; font-size: 12px; border-radius: 8px; }
         }
 
@@ -289,18 +289,7 @@ u<!DOCTYPE html>
 <body>
 
     <header>
-    
-
-    <nav>
-        <ul class="nav-links">
-            <li><a href="index.html">Home 🏠</a></li>
-            <li><a href="https://cinesubz.lk/" target="_blank">Movies🎬</a></li>
-            <li><a href="https://wa.me/94777042735" target="_blank">Contact 📬</a></li>
-        </ul>
-        <input type="text" id="storeSearch" class="search-bar" placeholder="🔍 Search All Games...">
-    </nav>
-        <header>
-    <div class="logo-section">
+        <div class="logo-section">
             <div class="logo-box"></div>
             <div class="brand-name">LANX GAMES.LK</div>
         </div>
@@ -313,11 +302,21 @@ u<!DOCTYPE html>
             </div>
         </div>
     </header>
+
+    <nav>
+        <ul class="nav-links">
+            <li><a href="index.html">Home </a></li>
+            <li><a href="https://cinesubz.lk/" target="_blank">Movies</a></li>
+            <li><a href="https://wa.me/94777042735" target="_blank">Contact </a></li>
+        </ul>
+        <input type="text" id="storeSearch" class="search-bar" placeholder="🔍 Search All Games...">
+    </nav>
+
     <div class="container">
-        <a href="index.html" class="back-btn"> Back to Home</a>
-        <h2 class="grid-title"> All GAMES </h2>
+        <a href="index.html" class="back-btn">← Back to Home</a>
+        <h2 class="grid-title">ALL GAMES</h2>
         <div class="game-grid" id="gameGrid">
-            <p style="text-align: center; width: 100%;"> Loading Games..</p>
+            <p style="text-align: center; width: 100%;">Loading Games..</p>
         </div>
         <div id="pagination" class="pagination-container"></div>
     </div>
@@ -481,6 +480,3 @@ u<!DOCTYPE html>
     </script>
 </body>
 </html>
-
-
-
