--- a/store.html
+++ b/store.html
@@ -123,12 +123,12 @@
             gap: 25px;
         }
 
-        .nav-links { display: flex; list-style: none; gap: 40px; flex-wrap: wrap; justify-content: center; }
+        .nav-links { display: flex; list-style: none; gap: 3Tpx; flex-wrap: wrap; justify-content: center; }
         .nav-links a {
             color: #888;
             text-decoration: none;
             text-transform: uppercase;
-            font-size: 14px;
+            font-size: 13px;
             font-weight: 600;
             letter-spacing: 2px;
             transition: 0.4s;
@@ -161,8 +161,8 @@
             .user-nav-area span { font-size: 8px; letter-spacing: 0.5px; }
             .user-nav-area img { width: 22px; height: 22px; }
             nav { padding: 10px 3%; gap: 15px; }
-            .nav-links { gap: 12px; } 
-            .nav-links a { font-size: 11px; letter-spacing: 0.5px; } 
+            .nav-links { gap: 14px; } 
+            .nav-links a { font-size: 13px; letter-spacing: 0.5px; } 
             .search-bar { padding: 10px 15px; font-size: 12px; border-radius: 8px; }
         }
 
@@ -480,4 +480,5 @@
     </script>
 </body>
 </html>
+
 
