--- a/store.html
+++ b/store.html
@@ -176,6 +176,7 @@
             justify-content: center;
         }
 
+        /* --- GAME CARD UPDATED FOR LAPTOP (5 PER ROW) --- */
         .game-item {
             background: #0a0a0a;
             border: 1px solid #1a1a1a;
@@ -185,14 +186,14 @@
             text-align: center;
             display: flex;
             flex-direction: column;
-            width: calc(25% - 12px); 
+            width: calc(20% - 12px); /* Laptop එකේදී පේළියකට 5ක් */
         }
 
         .game-item:hover { border-color: #fff; transform: translateY(-5px); }
 
         .game-item img {
             width: 100%;
-            height: 220px;
+            height: 280px; /* Laptop එකේදී image එකේ size එක ගැලපෙන්න වැඩි කරා */
             object-fit: cover; 
             display: block;
         }
@@ -278,9 +279,14 @@
             border-color: #fff;
         }
 
+        /* Responsive Adjustments */
+        @media (max-width: 1200px) { .game-item { width: calc(25% - 12px); } }
         @media (max-width: 1024px) { .game-item { width: calc(33.33% - 10px); } }
         @media (max-width: 768px) { .game-item { width: calc(50% - 10px); } }
-        @media (max-width: 480px) { .game-item { width: calc(50% - 8px); } }
+        @media (max-width: 480px) { 
+            .game-item { width: calc(50% - 8px); } 
+            .game-item img { height: 220px; } /* Phone එකේදී image එක පරණ size එකටම තිබ්බා */
+        }
 
         footer { text-align: center; padding: 20px; border-top: 1px solid #222; margin-top: 30px; color: #555; font-size: 12px; }
         .back-btn { display: inline-block; margin-bottom: 20px; color: #888; text-decoration: none; font-size: 13px; }
@@ -480,5 +486,3 @@
     </script>
 </body>
 </html>
-
-
