--- a/index.html
+++ b/index.html
@@ -311,12 +311,11 @@
             align-items: start;
         }
 
-        /* --- FIREBASE STYLE GAME CARDS --- */
+        /* --- GAME CARDS GRID FOR 2 PER ROW --- */
         .main-content {
-            display: flex;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: 1fr 1fr; /* Laptop & Phone 2 cards per row */
             gap: 15px;
-            justify-content: center;
         }
 
         .game-card {
@@ -330,10 +329,9 @@
             border-radius: 25px;
             border: 1px solid rgba(255,255,255,0.05);
             transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            margin-bottom: 25px;
             position: relative;
             overflow: hidden;
-            width: calc(48% - 8px); /* Both Laptop & Phone - Show 2 per row */
+            width: 100%;
         }
 
         .game-card:hover {
@@ -394,19 +392,17 @@
         .download-btn:hover { background: #fff; color: #000; box-shadow: 0 0 15px rgba(255,255,255,0.3); }
 
         @media (min-width: 1024px) {
-            .container { grid-template-columns: 3fr 1fr; } 
+            .container { grid-template-columns: 3fr 1fr; } /* Sidebar on Laptop */
         }
 
         @media (max-width: 480px) {
-            .game-card {
-                padding: 12px; margin-bottom: 5px; gap: 8px;
-                border-radius: 20px;
-            }
-            .game-img { width: 100%; height: 160px; border-radius: 15px; border: none; }
+            .main-content { gap: 10px; }
+            .game-card { padding: 12px; border-radius: 20px; }
+            .game-img { height: 150px; border-radius: 15px; }
             .game-img img { border-radius: 15px; }
-            .game-title { font-size: 12px; min-height: 35px; line-height: 1.2; }
+            .game-title { font-size: 12px; min-height: 35px; }
             .game-info, .rating { font-size: 9px; }
-            .download-btn { margin-top: 5px; padding: 7px; font-size: 9px; width: 100%; border-radius: 8px; }
+            .download-btn { padding: 7px; font-size: 9px; width: 100%; border-radius: 8px; }
         }
 
         footer { text-align: center; padding: 20px; border-top: 1px solid #222; margin-top: 30px; color: #555; font-size: 12px; }
@@ -416,7 +412,7 @@
             .desktop-only-ads {
                 display: block !important;
                 width: 100%; background: #0a0a0a; padding: 15px;
-                border-radius: 8px; border: 1px solid #1a1a1a; margin-top: 0px;
+                border-radius: 8px; border: 1px solid #1a1a1a;
                 position: sticky; top: 100px;
             }
         }
@@ -451,18 +447,6 @@
             height: 22px;
             margin-right: 10px;
             filter: brightness(0); 
-        }
-
-        @media (max-width: 600px) {
-            .premium-donate-btn {
-                padding: 10px 15px;
-                font-size: 13px;
-                bottom: 20px;
-                right: 20px;
-            }
-            .premium-donate-btn img {
-                height: 18px;
-            }
         }
     </style>
 </head>
@@ -510,10 +494,9 @@
     </div>
 
     <div class="container">
-        <div class="main-content-area">
+        <div class="main-content-section">
             <h2 style="text-align: center; margin-bottom: 20px; letter-spacing: 5px; width: 100%; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 25px; font-size: 18px;">GAMES</h2>
             <div class="main-content">
-
                 <div class="game-card">
                     <div class="game-img"><img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1174180/capsule_616x353.jpg"></div>
                     <div class="game-details">
@@ -524,7 +507,6 @@
                         <a href="https://shrinkme.click/9vE4L8m" target="_blank" class="download-btn">DOWNLOAD</a>
                     </div>
                 </div>
-
                 <div class="game-card">
                     <div class="game-img"><img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/271590/capsule_616x353.jpg"></div>
                     <div class="game-details">
@@ -535,7 +517,6 @@
                         <a href="https://shrinkme.click/GTA5LX" target="_blank" class="download-btn">DOWNLOAD</a>
                     </div>
                 </div>
-
                 <div class="game-card">
                     <div class="game-img"><img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1517290/capsule_616x353.jpg"></div>
                     <div class="game-details">
@@ -546,7 +527,6 @@
                         <a href="https://shrinkme.click/BF6LX" target="_blank" class="download-btn">DOWNLOAD</a>
                     </div>
                 </div>
-
                 <div class="game-card">
                     <div class="game-img"><img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/1202240/capsule_616x353.jpg"></div>
                     <div class="game-details">
@@ -557,9 +537,7 @@
                         <a href="https://shrinkme.click/DSPLX" target="_blank" class="download-btn">DOWNLOAD</a>
                     </div>
                 </div>
-
-            </div>    
-            
+            </div>
             <a href="store.html" class="more-games-btn" style="width: 100%; border: 2px solid #fff; color: #fff; text-decoration: none; padding: 15px; display: block; text-align: center; font-weight: bold; border-radius: 12px; margin-top: 20px;">See More Games ➔</a>
         </div>
 
@@ -618,7 +596,6 @@
                 document.getElementById('userImg').src = user.photoURL;
                 document.getElementById('userImg').style.width = '35px'; 
                 document.getElementById('userImg').style.height = '35px';
-                
                 document.getElementById('cardImg').src = user.photoURL;
                 document.getElementById('cardName').innerText = user.displayName;
                 document.getElementById('cardEmail').innerText = user.email;
