Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -494,10 +494,12 @@
 
     <nav>
         <ul class="nav-links">
-            <li><a href="store.html" target="_blank">Games 🎮</a></li>
-            <li><a href="https://cinesubz.lk/" target="_blank">Movies🎬</a></li>
-            <li><a href="https://cinesubz.lk/tvshows/" target="_blank">TV Series 📺</a></li>
-            <li><a href="https://wa.me/94777042735" target="_blank">Contact📬</a></li>
+    <li><a href="store.html" target="_blank">Games 🎮</a></li>
+    <li><a href="https://cinesubz.lk/" target="_blank">Movies🎬</a></li>
+    <li><a href="https://cinesubz.lk/tvshows/" target="_blank">TV Series 📺</a></li>
+    <li><a href="about.html">About Us</a></li> <li><a href="privacy.html">Privacy Policy</a></li> <li><a href="https://wa.me/94777042735" target="_blank">Contact📬</a></li>
+     
+         </ul>
         </ul>
         <input type="text" id="gameSearch" class="search-bar" placeholder="🔍 Search Games & Movies...">
     </nav>
@@ -662,3 +664,4 @@
 
 </body>
 </html>
+
