--- a/index.html
+++ b/index.html
@@ -576,9 +576,20 @@
         </aside>
     </div>    
 
-    <footer>
-        <marquee>© [ LANX GAMES.LK ] CREATED BY, PAMOD YOSHITHA ABEYRATHNA.</marquee>
-    </footer>
+    <footer style="background: #000; border-top: 1px solid rgba(255,255,255,0.05); padding: 40px 20px; text-align: center; margin-top: 50px;">
+    <div style="margin-bottom: 25px; display: flex; justify-content: center; gap: 30px;">
+        <a href="about.html" style="color: #888; text-decoration: none; font-size: 11px; letter-spacing: 2px; text-transform: uppercase; font-weight: 600; transition: 0.3s;">About Us</a>
+        <a href="privacy.html" style="color: #888; text-decoration: none; font-size: 11px; letter-spacing: 2px; text-transform: uppercase; font-weight: 600; transition: 0.3s;">Privacy Policy</a>
+    </div>
+    
+    <div style="color: #444; font-size: 10px; letter-spacing: 3px; margin-bottom: 15px; text-transform: uppercase;">
+        © 2026 LANX GAMES.LK | ALL RIGHTS RESERVED
+    </div>
+    
+    <div style="width: 100%; overflow: hidden;">
+        <marquee style="color: #222; font-size: 9px; width: 50%; letter-spacing: 1px;">CREATED BY PAMOD YOSHITHA ABEYRATHNA</marquee>
+    </div>
+</footer>
 
     <a href="https://www.buymeacoffee.com/shiyamal50e" target="_blank" class="premium-donate-btn">
         <img src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" alt="Donate">
@@ -664,4 +675,5 @@
 
 </body>
 </html>
+
 
