--- a/index.html
+++ b/index.html
@@ -494,10 +494,10 @@
 
     <nav>
         <ul class="nav-links">
-    <li><a href="store.html" target="_blank">Games 🎮</a></li>
-    <li><a href="https://cinesubz.lk/" target="_blank">Movies🎬</a></li>
-    <li><a href="https://cinesubz.lk/tvshows/" target="_blank">TV Series 📺</a></li>
-    <li><a href="about.html">About Us</a></li> <li><a href="privacy.html">Privacy Policy</a></li> <li><a href="https://wa.me/94777042735" target="_blank">Contact📬</a></li>
+    <li><a href="store.html" target="_blank">Games </a></li>
+    <li><a href="https://cinesubz.lk/" target="_blank">Movies</a></li>
+    <li><a href="https://cinesubz.lk/tvshows/" target="_blank">TV Series </a></li>
+    <li><a href="https://wa.me/94777042735" target="_blank">Contact</a></li>
      
          </ul>
         </ul>
@@ -675,5 +675,6 @@
 
 </body>
 </html>
+
 
 
