--- a/index.html
+++ b/index.html
@@ -577,9 +577,16 @@
     </div>    
 
     <footer style="background: #000; border-top: 1px solid rgba(255,255,255,0.05); padding: 40px 20px; text-align: center; margin-top: 50px;">
-    <div style="margin-bottom: 25px; display: flex; justify-content: center; gap: 30px;">
-        <a href="about.html" style="color: #888; text-decoration: none; font-size: 11px; letter-spacing: 2px; text-transform: uppercase; font-weight: 600; transition: 0.3s;">About Us</a>
-        <a href="privacy.html" style="color: #888; text-decoration: none; font-size: 11px; letter-spacing: 2px; text-transform: uppercase; font-weight: 600; transition: 0.3s;">Privacy Policy</a>
+    
+    <div style="margin-bottom: 20px; display: flex; justify-content: center; gap: 30px;">
+        <a href="about.html" style="color: #888; text-decoration: none; font-size: 11px; letter-spacing: 2px; text-transform: uppercase; font-weight: 600;">About Us</a>
+        <a href="privacy.html" style="color: #888; text-decoration: none; font-size: 11px; letter-spacing: 2px; text-transform: uppercase; font-weight: 600;">Privacy Policy</a>
+    </div>
+
+    <div style="margin-bottom: 25px; display: flex; justify-content: center; gap: 25px;">
+        <a href="https://wa.me/94777042735" target="_blank" style="color: #fff; font-size: 20px; opacity: 0.6; transition: 0.3s;"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://facebook.com/your-page" target="_blank" style="color: #fff; font-size: 20px; opacity: 0.6; transition: 0.3s;"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://youtube.com/your-channel" target="_blank" style="color: #fff; font-size: 20px; opacity: 0.6; transition: 0.3s;"><i class="fab fa-youtube"></i></a>
     </div>
     
     <div style="color: #444; font-size: 10px; letter-spacing: 3px; margin-bottom: 15px; text-transform: uppercase;">
@@ -695,6 +702,7 @@
 
 </body>
 </html>
+
 
 
 
