--- a/store.html
+++ b/store.html
@@ -409,10 +409,12 @@
     </div>
 
     <footer style="background: #000; border-top: 1px solid rgba(255,255,255,0.05); padding: 40px 20px; text-align: center; margin-top: 50px;">
-        <div style="margin-bottom: 20px; display: flex; justify-content: center; gap: 30px;">
-            <a href="about.html" style="color: #888; text-decoration: none; font-size: 11px; letter-spacing: 2px; text-transform: uppercase; font-weight: 600;">About Us</a>
-            <a href="privacy.html" style="color: #888; text-decoration: none; font-size: 11px; letter-spacing: 2px; text-transform: uppercase; font-weight: 600;">Privacy Policy</a>
-        </div>
+        <div style="margin-bottom: 20px; display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
+    <a href="about.html" style="color: #888; text-decoration: none; font-size: 12px; text-transform: uppercase; letter-spacing: 1px; transition: 0.3s;" onmouseover="this.style.color='#fff'" onmouseout="this.style.color='#888'">About Us</a>
+    <a href="privacy.html" style="color: #888; text-decoration: none; font-size: 12px; text-transform: uppercase; letter-spacing: 1px; transition: 0.3s;" onmouseover="this.style.color='#fff'" onmouseout="this.style.color='#888'">Privacy Policy</a>
+    <a href="terms.html" style="color: #888; text-decoration: none; font-size: 12px; text-transform: uppercase; letter-spacing: 1px; transition: 0.3s;" onmouseover="this.style.color='#fff'" onmouseout="this.style.color='#888'">Terms & Conditions</a>
+</div>
+
         <div style="margin-bottom: 25px; display: flex; justify-content: center; gap: 25px;">
             <a href="https://wa.me/94777042735" target="_blank" style="color: #fff; font-size: 20px; opacity: 0.6; transition: 0.3s;"><i class="fab fa-whatsapp"></i></a>
             <a href="https://www.facebook.com/share/1MsHT81ggc/" target="_blank" style="color: #fff; font-size: 20px; opacity: 0.6; transition: 0.3s;"><i class="fab fa-facebook-f"></i></a>
@@ -610,3 +612,4 @@
     </script>
 </body>
 </html>
+
