--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@
     <li><a href="store.html" target="_blank">Games </a></li>
     <li><a href="https://cinesubz.lk/" target="_blank">Movies</a></li>
     <li><a href="https://cinesubz.lk/tvshows/" target="_blank">TV Series </a></li>
+          <li>  <a href="news.html" target="_blank">Gaming News</a></li> 
          </ul>
         <input type="text" id="gameSearch" class="search-bar" placeholder="🔍 Search Games & Movies...">
     </nav>
@@ -723,3 +724,4 @@
 </script>
 </body>
 </html>
+
