--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 
   gtag('config', 'G-E5ZGPZREXB');
 </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🛒 Lanx Games.lk</title>
+ 
+    <link rel="icon" type="image/png" href="images.png">
+    <link rel="apple-touch-icon" href="images.png">
+    
+    <title>Lanx Games</title> 
+
 
     <meta name="description" content="Lanx Games.lk - Download the latest PC games, Movies and TV Series for free. The best digital store in Sri Lanka.">
     <meta name="keywords" content="Lanx Games, Lanx Games.lk, Download Games Sri Lanka, PC Games Download, Free Movies, LanxGames">
@@ -724,4 +730,5 @@
 </script>
 </body>
 </html>
+
 
