--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-    <link rel="icon" type="image/png" href="images.png">
-    <link rel="apple-touch-icon" href="images.png">
+    <link rel="icon" type="image/png" href="zz.png">
+    <link rel="apple-touch-icon" href="zz.png">
     
     <title>Lanx Games</title> 
 
@@ -730,5 +730,6 @@
 </script>
 </body>
 </html>
+
 
 
