Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-    <link rel="icon" type="image/png" href="x.png">
-    <link rel="apple-touch-icon" href="x.png">
+    <link rel="icon" type="image/png" href="e.png">
+    <link rel="apple-touch-icon" href="e.png">
     
     <title>Lanx Games</title> 
 
@@ -730,6 +730,7 @@
 </script>
 </body>
 </html>
+
 
 
 
