--- a/news.html
+++ b/news.html
@@ -293,7 +293,7 @@
 
         <article class="news-article">
             <div class="news-img">
-                <img src="add " alt="RTX 5090 News">
+                <img src="U.jpeg" alt="RTX 5090 News">
             </div>
             <div class="news-content">
                 <span class="news-meta">January 25, 2026 | Tech Updates</span>
