Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -505,27 +505,27 @@
             <h2 style="text-align: center; margin-bottom: 20px; letter-spacing: 5px; width: 100%; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 25px; font-size: 18px;">GAMES</h2>
 
             <div class="game-card">
-                <div class="game-img"><img src="download.png"></div>
+                <div class="game-img"><img src="1.jpeg"><div>
                 <div class="game-details">
-                    <div class="game-title">Grand Theft Auto (SanAndreas)</div>
+                    <div class="game-title">Grand Theft Auto V</div>
                     <p style="font-size: 12px; color: #888;">For PC [Paid]</p>
-                    <div class="game-info">Size: 3.6 GB</div>
+                    <div class="game-info">Size: 90.6 GB</div>
                     <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
                     <a href="https://shrinkme.click/Auxf8" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
 
             <div class="game-card">
-                <div class="game-img"><img src="downloadGRANNY.jpeg"></div>
+                <div class="game-img"><img src="2.jpeg"></div>
                 <div class="game-details">
-                    <div class="game-title">Granny 4 The Rebellion</div>
+                    <div class="game-title">red dead redemption 2</div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
-                    <div class="game-info">Size: 200 MB</div>
-                    <div class="rating">★ ★ ★ ★ ★ 7.7</div>
+                    <div class="game-info">Size: 14.3 GB</div>
+                    <div class="rating">★ ★ ★ ★ ★ 8.7</div>
                     <a href="https://shrinkme.click/MXxJQ" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
-
+            
             <div class="game-card">
                 <div class="game-img"><img src="5.jpeg"></div>
                 <div class="game-details">
@@ -730,6 +730,7 @@
 </script>
 </body>
 </html>
+
 
 
 
