--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             <h2 style="text-align: center; margin-bottom: 20px; letter-spacing: 5px; width: 100%; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 25px; font-size: 18px;">GAMES</h2>
 
             <div class="game-card">
-                <div class="game-img"><img src="1.jpeg"><div>
+                <div class="game-img"><img src="1.jpeg"></div>
                 <div class="game-details">
                     <div class="game-title">Grand Theft Auto V</div>
                     <p style="font-size: 12px; color: #888;">For PC [Paid]</p>
@@ -730,6 +730,7 @@
 </script>
 </body>
 </html>
+
 
 
 
