--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                 <div class="game-img"><img src="1.jpeg"></div>
                 <div class="game-details">
                     <div class="game-title">Grand Theft Auto V</div>
-                    <p style="font-size: 12px; color: #888;">For PC [Paid]</p>
+                    <p style="font-size: 12px; color: #888;">For PC [Free]</p>
                     <div class="game-info">Size: 90.6 GB</div>
                     <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
                     <a href="https://shrinkme.click/Auxf8" target="_blank" class="download-btn">DOWNLOAD</a>
@@ -527,22 +527,22 @@
             </div>
             
             <div class="game-card">
-                <div class="game-img"><img src="5.jpeg"></div>
+                <div class="game-img"><img src="3.jpeg"></div>
                 <div class="game-details">
-                    <div class="game-title">Granny 5 Time To Wake Up</div>
+                    <div class="game-title">Red dead redemption </div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
-                    <div class="game-info">Size: 6.5 GB</div>
-                    <div class="rating">★ ★ ★ ☆ ☆ 9.3</div>
+                    <div class="game-info">Size: 60.5 GB</div>
+                    <div class="rating">★ ★ ★ ☆ ☆ 3.3</div>
                     <a href="https://shrinkme.click/TOukmeF" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
 
             <div class="game-card">
-                <div class="game-img"><img src="47c33cac4a9431bc157a395095653102.jpg"></div>
+                <div class="game-img"><img src="4.jpg"></div>
                 <div class="game-details">
-                    <div class="game-title">StarRupture</div>
+                    <div class="game-title">Cyberpunk 2077: Phantom Liberty</div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
-                    <div class="game-info">Size: 27 GB</div>
+                    <div class="game-info">Size: 70 GB</div>
                     <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
                     <a href="https://shrinkme.click/hmibvUpV" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
@@ -730,6 +730,7 @@
 </script>
 </body>
 </html>
+
 
 
 
