Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 
     <div class="container">
         <div class="main-content">
-            <h2 style="text-align: center; margin-bottom: 20px; letter-spacing: 5px; width: 100%; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 25px; font-size: 18px;">GAMES</h2>
+            <h2 style="text-align: center; margin-bottom: 20px; letter-spacing: 5px; width: 100%; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 25px; font-size: 18px;">Most Download Games</h2>
 
             <div class="game-card">
                 <div class="game-img"><img src="1.jpeg"></div>
@@ -538,7 +538,7 @@
             </div>
 
             <div class="game-card">
-                <div class="game-img"><img src="4.jpg"></div>
+                <div class="game-img"><img src="4.jpeg"></div>
                 <div class="game-details">
                     <div class="game-title">Cyberpunk 2077: Phantom Liberty</div>
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
@@ -730,6 +730,7 @@
 </script>
 </body>
 </html>
+
 
 
 
