--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
                     <div class="game-info">Size: 90.6 GB</div>
                     <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
-                    <a href="https://shrinkme.click/Auxf8" target="_blank" class="download-btn">DOWNLOAD</a>
+                    <a href="https://otieu.com/4/10554174" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
 
@@ -546,7 +546,7 @@
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
                     <div class="game-info">Size: 14.3 GB</div>
                     <div class="rating">★ ★ ★ ★ ★ 8.7</div>
-                    <a href="https://shrinkme.click/MXxJQ" target="_blank" class="download-btn">DOWNLOAD</a>
+                    <a href="https://otieu.com/4/10554187" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
             
@@ -557,7 +557,7 @@
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
                     <div class="game-info">Size: 60.5 GB</div>
                     <div class="rating">★ ★ ★ ☆ ☆ 3.3</div>
-                    <a href="https://shrinkme.click/TOukmeF" target="_blank" class="download-btn">DOWNLOAD</a>
+                    <a href="https://otieu.com/4/10554190" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
 
@@ -568,7 +568,7 @@
                     <p style="font-size: 12px; color: #888;">For PC [Free]</p>
                     <div class="game-info">Size: 70 GB</div>
                     <div class="rating">★ ★ ★ ★ ☆ 8.2</div>
-                    <a href="https://shrinkme.click/hmibvUpV" target="_blank" class="download-btn">DOWNLOAD</a>
+                    <a href="https://otieu.com/4/10554194" target="_blank" class="download-btn">DOWNLOAD</a>
                 </div>
             </div>
 
@@ -805,6 +805,7 @@
     </script>
 </body>
 </html>
+
 
 
 
