--- a/store.html
+++ b/store.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script src="https://quge5.com/88/tag.min.js" data-zone="207723" async data-cfasync="false"></script>
+
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Games - LANX GAMES.LK</title>
@@ -612,4 +615,5 @@
     </script>
 </body>
 </html>
+
 
