--- a/store.html
+++ b/store.html
@@ -24,6 +24,23 @@
             overflow-x: hidden;
         }
 
+        /* --- SKELETON LOADING ANIMATION (ADDED) --- */
+        .skeleton {
+            background: linear-gradient(90deg, #0a0a0a 25%, #1a1a1a 50%, #0a0a0a 75%);
+            background-size: 200% 100%;
+            animation: skeleton-shimmer 1.5s infinite linear;
+            border-radius: 4px;
+        }
+        @keyframes skeleton-shimmer {
+            0% { background-position: 200% 0; }
+            100% { background-position: -200% 0; }
+        }
+        .skeleton-card { width: calc(20% - 12px); min-width: 200px; height: 400px; background: #0a0a0a; border: 1px solid #1a1a1a; padding: 15px; border-radius: 4px; }
+        .sk-img { width: 100%; height: 220px; margin-bottom: 15px; }
+        .sk-title { width: 80%; height: 15px; margin-bottom: 10px; }
+        .sk-text { width: 100%; height: 10px; margin-bottom: 8px; }
+        @media (max-width: 768px) { .skeleton-card { width: calc(50% - 10px); } }
+
         /* --- HEADER PREMIUM UPDATED --- */
         header {
             padding: 25px 8%;
@@ -405,7 +422,15 @@
     <div class="container">
         <a href="index.html" class="back-btn">← Back to Home</a>
         <h2 class="grid-title">ALL GAMES</h2>
-        <div class="game-grid" id="gameGrid">
+
+        <div id="skeleton-loader" style="display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;">
+            <div class="skeleton-card"><div class="skeleton sk-img"></div><div class="skeleton sk-title"></div><div class="skeleton sk-text"></div></div>
+            <div class="skeleton-card"><div class="skeleton sk-img"></div><div class="skeleton sk-title"></div><div class="skeleton sk-text"></div></div>
+            <div class="skeleton-card"><div class="skeleton sk-img"></div><div class="skeleton sk-title"></div><div class="skeleton sk-text"></div></div>
+            <div class="skeleton-card"><div class="skeleton sk-img"></div><div class="skeleton sk-title"></div><div class="skeleton sk-text"></div></div>
+        </div>
+
+        <div class="game-grid" id="gameGrid" style="display: none;">
             <p style="text-align: center; width: 100%;">Loading Games..</p>
         </div>
         <div id="pagination" class="pagination-container"></div>
@@ -517,11 +542,17 @@
                 displayGames(1);
             } else {
                 gameGrid.innerHTML = '<p>No games found.</p>';
+                // (HIDE LOADER IF NO DATA)
+                document.getElementById('skeleton-loader').style.display = 'none';
+                gameGrid.style.display = 'flex';
             }
         });
 
         function displayGames(page) {
             currentPage = page;
+            // SHOW LOADER WHEN CHANGING PAGES
+            document.getElementById('skeleton-loader').style.display = 'flex';
+            gameGrid.style.display = 'none';
             gameGrid.innerHTML = '';
             
             const start = (page - 1) * limit;
@@ -549,6 +580,10 @@
                     </div>`;
                 gameGrid.insertAdjacentHTML('beforeend', html);
             });
+
+            // (HIDE LOADER AFTER RENDERING)
+            document.getElementById('skeleton-loader').style.display = 'none';
+            gameGrid.style.display = 'flex';
 
             setupPagination();
             window.scrollTo(0, 0);
@@ -615,5 +650,3 @@
     </script>
 </body>
 </html>
-
-
