--- a/store.html
+++ b/store.html
@@ -24,7 +24,7 @@
             overflow-x: hidden;
         }
 
-        /* --- SKELETON LOADING ANIMATION (ADDED) --- */
+        /* --- SKELETON LOADING ANIMATION (FIXED WIDTH) --- */
         .skeleton {
             background: linear-gradient(90deg, #0a0a0a 25%, #1a1a1a 50%, #0a0a0a 75%);
             background-size: 200% 100%;
@@ -35,11 +35,25 @@
             0% { background-position: 200% 0; }
             100% { background-position: -200% 0; }
         }
-        .skeleton-card { width: calc(20% - 12px); min-width: 200px; height: 400px; background: #0a0a0a; border: 1px solid #1a1a1a; padding: 15px; border-radius: 4px; }
-        .sk-img { width: 100%; height: 220px; margin-bottom: 15px; }
-        .sk-title { width: 80%; height: 15px; margin-bottom: 10px; }
-        .sk-text { width: 100%; height: 10px; margin-bottom: 8px; }
+        .skeleton-card { 
+            width: calc(20% - 12px); 
+            height: 400px; 
+            background: #0a0a0a; 
+            border: 1px solid #1a1a1a; 
+            padding: 15px; 
+            border-radius: 4px; 
+            display: flex;
+            flex-direction: column;
+        }
+        .sk-img { width: 100%; height: 280px; margin-bottom: 15px; }
+        .sk-title { width: 80%; height: 15px; margin-bottom: 10px; align-self: center; }
+        .sk-text { width: 60%; height: 10px; margin-bottom: 8px; align-self: center; }
+        
+        /* Responsive Skeleton */
+        @media (max-width: 1200px) { .skeleton-card { width: calc(25% - 12px); } }
+        @media (max-width: 1024px) { .skeleton-card { width: calc(33.33% - 10px); } }
         @media (max-width: 768px) { .skeleton-card { width: calc(50% - 10px); } }
+        @media (max-width: 480px) { .skeleton-card { width: calc(50% - 8px); height: 320px; } .sk-img { height: 220px; } }
 
         /* --- HEADER PREMIUM UPDATED --- */
         header {
@@ -424,10 +438,17 @@
         <h2 class="grid-title">ALL GAMES</h2>
 
         <div id="skeleton-loader" style="display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;">
-            <div class="skeleton-card"><div class="skeleton sk-img"></div><div class="skeleton sk-title"></div><div class="skeleton sk-text"></div></div>
-            <div class="skeleton-card"><div class="skeleton sk-img"></div><div class="skeleton sk-title"></div><div class="skeleton sk-text"></div></div>
-            <div class="skeleton-card"><div class="skeleton sk-img"></div><div class="skeleton sk-title"></div><div class="skeleton sk-text"></div></div>
-            <div class="skeleton-card"><div class="skeleton sk-img"></div><div class="skeleton sk-title"></div><div class="skeleton sk-text"></div></div>
+            <script>
+                for(let i=0; i<20; i++) {
+                    document.write(`
+                        <div class="skeleton-card">
+                            <div class="skeleton sk-img"></div>
+                            <div class="skeleton sk-title"></div>
+                            <div class="skeleton sk-text"></div>
+                        </div>
+                    `);
+                }
+            </script>
         </div>
 
         <div class="game-grid" id="gameGrid" style="display: none;">
@@ -542,7 +563,6 @@
                 displayGames(1);
             } else {
                 gameGrid.innerHTML = '<p>No games found.</p>';
-                // (HIDE LOADER IF NO DATA)
                 document.getElementById('skeleton-loader').style.display = 'none';
                 gameGrid.style.display = 'flex';
             }
@@ -550,7 +570,7 @@
 
         function displayGames(page) {
             currentPage = page;
-            // SHOW LOADER WHEN CHANGING PAGES
+            // SHOW LOADER
             document.getElementById('skeleton-loader').style.display = 'flex';
             gameGrid.style.display = 'none';
             gameGrid.innerHTML = '';
@@ -581,7 +601,7 @@
                 gameGrid.insertAdjacentHTML('beforeend', html);
             });
 
-            // (HIDE LOADER AFTER RENDERING)
+            // HIDE LOADER
             document.getElementById('skeleton-loader').style.display = 'none';
             gameGrid.style.display = 'flex';
 
